# phantom-filler

./: SECURITY_FIXES_REPORT.md  config.example.toml
.github/workflows/: ci.yml
contracts/src/: PhantomFiller.sol  PhantomSettlement.sol
contracts/test/: PhantomFiller.t.sol  PhantomSettlement.t.sol
contracts/test/mocks/: MockERC20.sol  MockReactor.sol
crates/phantom-api/src/: config.rs  error.rs  handlers.rs  lib.rs  server.rs  state.rs
crates/phantom-common/src/: config.rs  error.rs  lib.rs
crates/phantom-discovery/src/: abi.rs  lib.rs
crates/phantom-execution/: Cargo.toml
crates/phantom-execution/src/: builder.rs  lib.rs  nonce.rs  relay.rs
crates/phantom-filler/: Cargo.toml
crates/phantom-filler/benches/: execution_bench.rs  orderbook_bench.rs  pnl_bench.rs  risk_bench.rs
crates/phantom-filler/tests/: proptest_inventory.rs  proptest_orderbook.rs  proptest_types.rs
crates/phantom-inventory/: Cargo.toml
crates/phantom-inventory/src/: balance.rs  lib.rs  pnl.rs
crates/phantom-metrics/: Cargo.toml
crates/phantom-metrics/src/: health.rs  lib.rs  logging.rs
crates/phantom-pricing/src/: aggregator.rs  dex_abi.rs  lib.rs  sources.rs  tokens.rs
crates/phantom-settlement/: Cargo.toml
crates/phantom-settlement/src/: confirmation.rs  lib.rs
